# tree-sitter-glsl

./: .gitignore  .gitmodules  .npmignore  AGENTS.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  builtin.js  eslint.config.mjs  extensions.js  grammar.js  keywords.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  tsconfig.json
.claude/rules/: builtin.md  extensions.md  generated.md  grammar.md  keywords.md  versioning.md
.claude/skills/add-extension/: SKILL.md
.claude/skills/add-rule/: SKILL.md
.claude/skills/update-spec/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml  missing_extension.yml
.github/scripts/: create_issue.sh  diff_node_types.js  find_last_reported_spec_change.sh  release_notes.sh  verify_spec_changed.sh
.github/templates/: SPEC_CHANGE_ISSUE.md
.github/workflows/: ci.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml  publish.yml  spec-dismiss.yml  spec-sync.yml
bindings/go/: binding_test.go  go.mod
bindings/node/: index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_glsl_spec/: binding.c
bindings/rust/: build.rs  lib.rs
queries/: constructor-heuristics.scm  highlights.in  highlights.scm  injections.scm  locals.scm  tags.scm  version-tags.scm
scripts/: audit_node_types.js  generate_highlights.js  scrape_identifiers.js
src/: grammar.json  node-types.json
test/corpus/: core_declarations.txt  core_expressions.txt  core_preprocessor.txt  core_statements.txt  lang_extensions.txt  lang_injections.txt  macro_ambiguity.txt
(+2 files in other folders)
